Fix items being behind navbar

--- a/FoodHub/wwwroot/css/site.css
+++ b/FoodHub/wwwroot/css/site.css
@@ -8,11 +8,19 @@ for details on configuring this project to bundle and minify static web assets. 
   font-weight: 500;
 }
 
+html,
+body {
+  height: 100vh;
+}
+
 body {
   font-size: 1rem;
   line-height: 1.5;
   color: #333;
   /* background-color: #e7ffee; */
+  display: flex;
+  flex-direction: column;
+  margin-top: 156px;
 }
 
 a.navbar-brand {
@@ -206,7 +214,7 @@ button.accept-policy {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 85vh;
+  height: 70vh;
 }
 
 .form-hero {
@@ -362,7 +370,6 @@ button.accept-policy {
 
 .stat-box:hover {
   transform: scale(1.05) rotate(1deg);
-
 }
 
 .stat-box h3 {
@@ -385,6 +392,8 @@ button.accept-policy {
   padding: 40px 20px 20px;
   border-top-left-radius: 50px;
   border-top-right-radius: 50px;
+  bottom: 0;
+  flex-shrink: 0;
 }
 
 .footer-content {
